# vdf_beacon

./: Cargo.toml  README.md
.cargo/: config.toml
crates/vdf-bench/: Cargo.toml
crates/vdf-bench/src/: main.rs
crates/vdf-core/: Cargo.toml
crates/vdf-core/src/: lib.rs
crates/vdf-pietrzak/: Cargo.toml
crates/vdf-pietrzak/src/: eval.rs  lib.rs  prove.rs
crates/vdf-snark/: Cargo.toml
crates/vdf-snark/program/: Cargo.toml
crates/vdf-snark/program/src/: main.rs
crates/vdf-snark/src/: hash_chain.rs  lib.rs  prover.rs
crates/vdf-wesolowski/: Cargo.toml
crates/vdf-wesolowski/src/: eval.rs  lib.rs  prove.rs
elf/: riscv32im-succinct-zkvm-elf
results/: bench.csv
scripts/: plot_results.py  run_all_benchmarks.sh
