[workspace]

[package]
name    = "vdf-snark-program"
version = "0.1.0"
edition = "2021"

# This crate is compiled for the SP1 RISC-V target and is NOT part of the
# main workspace (see workspace exclude in root Cargo.toml).
# Build with: cargo prove build  (requires `sp1up` toolchain)

[dependencies]
sp1-zkvm = "3"
sha2     = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8", package = "sha2", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
