[workspace]

[package]
name    = "vdf-snark-program"
version = "0.1.0"
edition = "2021"

# This crate is compiled for the SP1 RISC-V target and is NOT part of the
# main workspace (see workspace exclude in root Cargo.toml).
# Build with: cargo prove build  (requires `sp1up` toolchain)

[dependencies]
sp1-zkvm = "3"
light-poseidon-nostd = { version = "0.4.1", default-features = false }
ark-bn254 = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
sha2 = { version = "0.10", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
